[DLAB-1319, 1257] Fixed alignment on Environment Management and padding in billing grid

--- a/services/self-service/src/main/resources/webapp/src/app/reporting/reporting-grid/reporting-grid.component.scss
+++ b/services/self-service/src/main/resources/webapp/src/app/reporting/reporting-grid/reporting-grid.component.scss
@@ -39,6 +39,7 @@
 
     td {
       font-size: 13px;
+      padding-left: 5px;
 
       &.info {
         z-index: 1 !important;
